--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <h1>{{title}}</h1>
 </div>
 
-<div *ngIf="users" class="col-sm-6">
+<div *ngIf="hasUsers" class="col-sm-6">
   <table class="table table-hover">
     <thead>
       <tr>
@@ -18,6 +18,6 @@
     </tbody>
   </table>
 </div>
-<div *ngIf="!users">
+<div *ngIf="!hasUsers">
   Er zijn geen users gevonden.
 </div>
